@@ -1,5 +1,5 @@
 name             = Number-AnyBase
-version          = 1.50002
+version          = 1.60000
 author           = Emanuele Zeppieri <emazep@cpan.org>
 license          = Perl_5
 copyright_holder = Emanuele Zeppieri
